# api_nbs_gb

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
src/: server.py
src/controller/: accounts.py  nbs_controller.py
src/data/: models.py  schemas.py
src/data/schemas/: nbs_schemas.py  user_schemas.py
src/data/sql/: sql_scheduled_review.py  sql_vehicle_delivered.py  sql_vehicle_sold.py
src/infra/: config.py  security.py
src/infra/databases/: oracle_nbs.py  postgres.py
src/infra/middleware/: deps.py
src/infra/oracle/instantclient_23_8/: BASIC_README
src/infra/seed/: init.sql
src/routes/: auth_router.py  nbs_router.py  router.py
